feat: add requirements.txt and update .env.example
- Add complete requirements.txt with all project dependencies
- Update .env.example with detailed configuration template
- Include risk management and trading hours settings

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,36 @@
+# =================================
+# ПЕРЕМЕННЫЕ ОКРУЖЕНИЯ ДЛЯ ТОРГОВОГО БОТА
+# =================================
 
-# Trading Bot Environment Variables
+# Telegram Bot API
+TELEGRAM_TOKEN=your_telegram_bot_token_here
 
-# Tinkoff API
+# Tinkoff Invest API
 TINKOFF_TOKEN=your_tinkoff_api_token_here
-TINKOFF_SANDBOX=true
+TINKOFF_ENVIRONMENT=sandbox
 
-# Telegram Bot
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
-TELEGRAM_CHAT_ID=your_chat_id_here
+# OpenAI API для анализа новостей
+OPENAI_API_KEY=your_openai_api_key_here
 
-# Database
-DATABASE_URL=sqlite:///trading_bot.db
+# Настройки базы данных
+DATABASE_URL=sqlite:///data/trading_bot.db
 
-# Risk Management
-MAX_POSITION_SIZE=0.1
-RISK_PER_TRADE=0.02
-MAX_DAILY_LOSS=0.05
-
-# Technical Analysis
-SMA_PERIODS=20,50,200
-RSI_PERIOD=14
-
-# Logging
+# Настройки логирования
 LOG_LEVEL=INFO
 LOG_FILE=logs/trading_bot.log
 
-# News Analysis
-NEWS_API_KEY=your_news_api_key_here
+# Настройки риск-менеджмента
+MAX_POSITION_SIZE=0.05
+MAX_DAILY_LOSS=0.03
+MAX_DAILY_TRADES=5
+DEFAULT_STOP_LOSS=0.07
+DEFAULT_TAKE_PROFIT=0.10
+
+# Торговые часы (МСК)
+MARKET_OPEN=10:00
+MARKET_CLOSE=19:00
+FORCE_CLOSE_TIME=18:50
+
+# Режим работы
+DEBUG_MODE=True
+DRY_RUN=True
