--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # Core dependencies
 requests==2.31.0
 python-telegram-bot==20.7
-tinkoff-invest==1.0.8
+
+# Tinkoff API (правильная версия)
+tinkoff-invest==1.3.2
 
 # Data analysis
 pandas==2.1.4
@@ -11,14 +13,10 @@ ta==0.10.2
 # AI and NLP
 openai==1.6.1
 
-# Database
-sqlite3
-
 # Configuration
 python-dotenv==1.0.0
 
 # Async support
-asyncio
 aiohttp==3.9.1
 
 # Logging
