--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
 # Core dependencies
-requests==2.31.0
-python-telegram-bot==20.7
+requests>=2.31.0
+python-telegram-bot>=20.0
 
-# Tinkoff API (правильная версия)
+# Tinkoff API (проверенная версия)
 tinkoff-invest==1.0.5
 
-# Data analysis
-pandas==2.1.4
-numpy==1.24.3
-ta==0.10.2
+# Data analysis (стабильные версии)
+pandas>=2.2.0
+numpy>=1.24.0
+ta>=0.10.0
 
 # AI and NLP
-openai==1.6.1
+openai>=1.0.0
 
 # Configuration
-python-dotenv==1.0.0
+python-dotenv>=1.0.0
 
 # Async support
-aiohttp==3.9.1
+aiohttp>=3.8.0
 
 # Logging
-loguru==0.7.2
+loguru>=0.7.0
 
 # Testing (dev dependencies)
-pytest==7.4.3
-pytest-asyncio==0.21.1
+pytest>=7.0.0
+pytest-asyncio>=0.21.0
